Adding copyright check to the pipeline and precheckin

--- a/build.yaml
+++ b/build.yaml
@@ -17,6 +17,10 @@ steps:
       displayName: check code formatting
 
     - script: |
+          yarn copyright-check
+      displayName: check for copyright headers
+
+    - script: |
           yarn clean
       displayName: clean
 
