Adjusting to not add license automatically

--- a/build.yaml
+++ b/build.yaml
@@ -1,3 +1,5 @@
+# Copyright (c) Microsoft Corporation. All rights reserved.
+# Licensed under the MIT License.
 pool:
     vmImage: 'Ubuntu-16.04'
     demands: npm
