Update TSLint include and exclude Setting in tsConfig

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,5 +15,7 @@
     "awesomeTypescriptLoaderOptions": {
         "usePrecompiledFiles": true,
         "useWebpackText": true
-    }
+    },
+    "include": ["**/*"],
+    "exclude": ["node_modules"]
 }
