remove node_modules

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,6 @@
         "usePrecompiledFiles": true,
         "useWebpackText": true
     },
-    "include": ["**/*"],
+    "include": ["**/*.ts", "**/*.js"],
     "exclude": ["**/dist", "**/*.d.ts"]
 }
