--- a/packages/storage-documents/package.json
+++ b/packages/storage-documents/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "runner",
+    "name": "storage-documents",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --config-name runner --colors --progress",
+        "build": "tsc && echo",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
@@ -14,51 +14,28 @@
         "type": "git",
         "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
     },
+    "main": "dist/index.js",
     "author": "Microsoft",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
+    "dependencies": {
+        "inversify": "^5.0.1",
+        "reflect-metadata": "^0.1.13"
+    },
     "devDependencies": {
-        "@types/dotenv": "^6.1.0",
         "@types/jest": "^24.0.11",
-        "@types/lodash": "^4.14.123",
-        "@types/node": "^11.9.4",
-        "@types/puppeteer": "^1.12.1",
-        "@types/sha.js": "^2.4.0",
-        "@types/verror": "^1.10.3",
-        "@types/yargs": "^12.0.9",
-        "copy-webpack-plugin": "^4.6.0",
-        "fork-ts-checker-webpack-plugin": "^0.5.2",
+        "@types/node": "^11.13.4",
         "jest": "^24.7.1",
         "jest-circus": "^24.7.1",
         "jest-junit": "^6.3.0",
-        "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
-        "ts-jest": "^24.0.0",
-        "ts-loader": "^5.3.3",
-        "tslint": "5.12.1",
-        "tslint-microsoft-contrib": "6.0.0",
+        "ts-jest": "^24.0.2",
+        "tslint": "^5.12.1",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
-        "typescript": "^3.4.3",
-        "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3"
-    },
-    "dependencies": {
-        "@azure/cosmos": "^2.1.2",
-        "axe-core": "3.2.2",
-        "axe-puppeteer": "^1.0.0",
-        "axis-storage": "1.0.0",
-        "dotenv": "^6.2.0",
-        "headless-chrome-crawler": "^1.8.0",
-        "inversify": "^5.0.1",
-        "logger": "1.0.0",
-        "puppeteer": "^1.12.2",
-        "reflect-metadata": "^0.1.13",
-        "sha.js": "^2.4.11",
-        "storage-documents": "1.0.0",
-        "verror": "^1.10.0",
-        "yargs": "^13.2.1"
+        "typescript": "^3.4.3"
     }
 }
