moving bash comment to top

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
             "./node_modules",
             "./test-results",
             "./copyright-header.txt",
+            "./packages/job-manager/out",
             "./packages/job-manager/dist",
             "./packages/job-manager/node_modules",
             "./packages/job-manager/src/test-resources/",
@@ -57,6 +58,7 @@
             "./packages/logger/src/test-resources/",
             "./packages/logger/test-results",
             "./packages/logger/out",
+            "./packages/runner/out",
             "./packages/runner/dist",
             "./packages/runner/node_modules",
             "./packages/runner/src/test-resources/",
