--- a/package.json
+++ b/package.json
@@ -82,7 +82,10 @@
             "./packages/storage-documents/dist",
             "./packages/storage-documents/node_modules",
             "./packages/storage-documents/src/test-resources/",
-            "./packages/storage-documents/test-results"
+            "./packages/storage-documents/test-results",
+            "./packages/service-library/node_modules",
+            "./packages/service-library/src/test-resources/",
+            "./packages/service-library/test-results"
         ],
         "file_type_method": "INCLUDE",
         "file_types": [
