Extract common package

--- a/packages/job-manager/package.json
+++ b/packages/job-manager/package.json
@@ -52,6 +52,7 @@
         "logger": "1.0.0",
         "moment": "^2.22.2",
         "reflect-metadata": "^0.1.13",
-        "verror": "^1.10.0"
+        "verror": "^1.10.0",
+        "common": "1.0.0"
     }
 }
