--- a/package.json
+++ b/package.json
@@ -85,7 +85,10 @@
             "./packages/storage-documents/test-results",
             "./packages/service-library/node_modules",
             "./packages/service-library/src/test-resources/",
-            "./packages/service-library/test-results"
+            "./packages/service-library/test-results",
+            "./packages/common/node_modules",
+            "./packages/common/src/test-resources/",
+            "./packages/common/test-results"
         ],
         "file_type_method": "INCLUDE",
         "file_types": [
