--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "scan-request-sender",
+    "name": "common",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
+        "build": "tsc && echo",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
@@ -14,43 +14,31 @@
         "type": "git",
         "url": "git+https://github.com/Microsoft/accessibility-insights-service.git"
     },
+    "main": "dist/index.js",
     "author": "Microsoft",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
-    "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/scan-request-sender#readme",
+    "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
         "@types/jest": "^24.0.11",
-        "@types/puppeteer": "^1.12.1",
-        "@types/verror": "^1.10.3",
-        "@types/yargs": "^12.0.9",
-        "copy-webpack-plugin": "^4.6.0",
-        "fork-ts-checker-webpack-plugin": "^0.5.2",
+        "@types/node": "^11.13.4",
+        "@types/sha.js": "^2.4.0",
         "jest": "^24.7.1",
         "jest-circus": "^24.7.1",
         "jest-junit": "^6.3.0",
-        "npm-run-all": "^4.1.5",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.2",
-        "ts-loader": "^5.3.3",
-        "tslint": "5.12.1",
-        "tslint-microsoft-contrib": "6.0.0",
+        "tslint": "^5.12.1",
+        "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
-        "typescript": "^3.4.3",
-        "webpack": "^4.29.4",
-        "webpack-cli": "^3.2.3"
+        "typescript": "^3.4.3"
     },
     "dependencies": {
-        "@azure/cosmos": "^2.1.2",
-        "@types/sha.js": "^2.4.0",
-        "axis-storage": "^1.0.0",
-        "logger": "1.0.0",
-        "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
+        "lodash": "^4.17.11",
         "reflect-metadata": "^0.1.13",
-        "verror": "^1.10.0",
-        "common": "1.0.0",
-        "service-library": "1.0.0"
+        "sha.js": "^2.4.11"
     }
 }
