--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -21,14 +21,6 @@
         "url": "https://github.com/Microsoft/accessibility-insights-service/issues"
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
-    "dependencies": {
-        "applicationinsights": "^1.3.1",
-        "dotenv": "^6.2.0",
-        "inversify": "^5.0.1",
-        "lodash": "^4.17.11",
-        "reflect-metadata": "^0.1.13",
-        "verror": "^1.10.0"
-    },
     "devDependencies": {
         "@types/dotenv": "^6.1.0",
         "@types/jest": "^24.0.11",
@@ -43,7 +35,16 @@
         "tslint": "^5.12.1",
         "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
-        "typescript": "^3.4.3",
+        "typescript": "^3.4.3"
+    },
+    "dependencies": {
+        "applicationinsights": "^1.3.1",
+        "dotenv": "^6.2.0",
+        "inversify": "^5.0.1",
+        "lodash": "^4.17.11",
+        "reflect-metadata": "^0.1.13",
+        "verror": "^1.10.0",
+        "common": "1.0.0",
         "yargs": "^13.2.1"
     }
 }
