--- a/packages/job-manager/package.json
+++ b/packages/job-manager/package.json
@@ -53,6 +53,7 @@
         "moment": "^2.22.2",
         "reflect-metadata": "^0.1.13",
         "verror": "^1.10.0",
-        "common": "1.0.0"
+        "common": "1.0.0",
+        "service-library": "1.0.0"
     }
 }
