--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -41,7 +41,9 @@
         "lodash": "^4.17.11",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
+        "dotenv": "^6.2.0",
         "storage-documents": "1.0.0",
+        "logger": "1.0.0",
         "common": "1.0.0"
     }
 }
