--- a/packages/job-manager/package.json
+++ b/packages/job-manager/package.json
@@ -45,7 +45,7 @@
     "dependencies": {
         "@azure/batch": "^7.0.0",
         "@azure/ms-rest-nodeauth": "^1.1.1",
-        "axis-storage": "1.0.0",
+        "azure-services": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
