--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -49,7 +49,7 @@
         "@azure/cosmos": "^2.1.2",
         "axe-core": "3.2.2",
         "axe-puppeteer": "^1.0.0",
-        "axis-storage": "1.0.0",
+        "azure-services": "1.0.0",
         "dotenv": "^6.2.0",
         "headless-chrome-crawler": "^1.8.0",
         "inversify": "^5.0.1",
