--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -44,7 +44,7 @@
     "dependencies": {
         "@azure/cosmos": "^2.1.2",
         "@types/sha.js": "^2.4.0",
-        "axis-storage": "^1.0.0",
+        "azure-services": "^1.0.0",
         "logger": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
