--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -36,7 +36,7 @@
         "typescript": "^3.4.3"
     },
     "dependencies": {
-        "axis-storage": "1.0.0",
+        "azure-services": "1.0.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
         "reflect-metadata": "^0.1.13",
