--- a/packages/scan-request-sender/.vscode/launch.json
+++ b/packages/scan-request-sender/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Start debugging runner",
+            "name": "Start debugging request-sender",
             "type": "node",
             "request": "launch",
             "outFiles": ["${workspaceFolder}/out/**/*.js"],
@@ -14,13 +14,7 @@
             "preLaunchTask": "tsc",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
-            "args": [
-                "--websiteId=\"f81e98aa-d7c9-46a0-829f-9c4d67eb3405\"",
-                "--websiteName=\"MSFT Support\"",
-                "--baseUrl=\"https://support.microsoft.com/\"",
-                "--scanUrl=\"https://support.microsoft.com/en-us\"",
-                "--serviceTreeId=\"ec7b0c88-0e85-4ff7-8179-267615decc67\""
-            ]
+            "args": []
         }
     ]
 }
