--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -48,6 +48,7 @@
         "logger": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
+        "lodash": "^4.17.11",
         "reflect-metadata": "^0.1.13",
         "verror": "^1.10.0",
         "common": "1.0.0",
