--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -39,6 +39,7 @@
         "azure-services": "1.0.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
+        "moment": "2.24.0",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
         "dotenv": "^6.2.0",
