Support of cross partition query of DB collection

--- a/packages/resource-deployment/.env.template
+++ b/packages/resource-deployment/.env.template
@@ -1,12 +1,19 @@
+JOB-MANAGER_PROCESS_VARIABLES=
 AZ_BATCH_ACCOUNT_NAME=
 AZ_BATCH_ACCOUNT_URL=
 AZ_BATCH_POOL_ID=
+AZ_BATCH_TASK_ID=
 AZ_BATCH_JOB_ID=
+RUNNER_SCRIPTS_CONTAINER_NAME=batch-runner-script
 
+SCAN-REQUEST-SENDER_PROCESS_VARIABLES=
+QUEUE_SIZE=10
+
+COMMON_VARIABLES=
+AZURE_STORAGE_SCAN_QUEUE=scanrequest
 KEY_VAULT_URL=
-
-AZURE_STORAGE_SCAN_QUEUE=
-
-AZ_BATCH_TASK_PARAMETER=
-
 APPINSIGHTS_INSTRUMENTATIONKEY=
+
+SP_CLIENT_ID=
+SP_TENANT=
+SP_PASSWORD=
