--- a/build.yaml
+++ b/build.yaml
@@ -75,3 +75,5 @@ steps:
 
     - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
       displayName: 'Component Detection'
+      inputs:
+          failOnAlert: true
