--- a/package.json
+++ b/package.json
@@ -123,7 +123,6 @@
     "resolutions": {
         "puppeteer": "^1.13.0",
         "jquery": "^3.4.0",
-        "lodash": "^4.13.1",
-        "axios": "^0.19.0"
+        "lodash": "^4.13.1"
     }
 }
