Enabling the component governance task in PR builds + addressing comp governance issues (#162)
* Adding comp governance task to the build yaml

* Setting fail on alert to true for the comp governance task

* Addressing comp governance issues

* Removing the axios override

--- a/package.json
+++ b/package.json
@@ -121,6 +121,8 @@
         }
     },
     "resolutions": {
-        "puppeteer": "^1.13.0"
+        "puppeteer": "^1.13.0",
+        "jquery": "^3.4.0",
+        "lodash": "^4.13.1"
     }
 }
