--- a/build.yaml
+++ b/build.yaml
@@ -72,3 +72,8 @@ steps:
           pathtoPublish: '$(Build.ArtifactStagingDirectory)'
           artifactName: drop
       displayName: 'Publish build artifacts'
+
+    - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
+      displayName: 'Component Detection'
+      inputs:
+          failOnAlert: true
