--- a/build.yaml
+++ b/build.yaml
@@ -1,5 +1,7 @@
 # Copyright (c) Microsoft Corporation. All rights reserved.
 # Licensed under the MIT License.
+name: $(Build.SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
+
 pool:
     vmImage: 'Ubuntu-16.04'
     demands: npm
