--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -36,6 +36,7 @@
         "typescript": "^3.4.3"
     },
     "dependencies": {
+        "@sindresorhus/fnv1a": "^1.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.11",
         "reflect-metadata": "^0.1.13",
