--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
         "npm-run-all": "^4.1.5",
         "prettier": "1.16.4",
         "tslint": "^5.12.1",
+        "tslint-lines-between-class-members": "^1.3.2",
         "tslint-microsoft-contrib": "^6.0.0",
-        "typescript": "^3.3.3",
-        "tslint-lines-between-class-members": "^1.3.2"
+        "typescript": "^3.3.3"
     },
     "workspaces": {
         "packages": [
@@ -122,8 +122,7 @@
         }
     },
     "resolutions": {
-        "puppeteer": "^1.13.0",
-        "jquery": "^3.4.0",
-        "lodash": "^4.13.1"
+        "jquery": "^3.4.1",
+        "puppeteer": "^1.18.1"
     }
 }
