--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -24,7 +24,7 @@
     "devDependencies": {
         "@types/dotenv": "^6.1.0",
         "@types/jest": "^24.0.11",
-        "@types/lodash": "^4.14.123",
+        "@types/lodash": "^4.14.136",
         "@types/node": "^11.13.4",
         "@types/yargs": "^12.0.9",
         "jest": "^24.7.1",
@@ -39,12 +39,12 @@
     },
     "dependencies": {
         "applicationinsights": "^1.4.0",
+        "common": "1.0.0",
         "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
-        "lodash": "^4.17.11",
+        "lodash": "^4.17.14",
         "reflect-metadata": "^0.1.13",
         "verror": "^1.10.0",
-        "yargs": "^13.2.1",
-        "common": "1.0.0"
+        "yargs": "^13.2.1"
     }
 }
