--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -38,14 +38,14 @@
     },
     "dependencies": {
         "azure-services": "1.0.0",
+        "common": "1.0.0",
+        "dotenv": "^6.2.0",
         "inversify": "^5.0.1",
-        "lodash": "^4.17.11",
+        "lodash": "^4.17.14",
+        "logger": "1.0.0",
         "moment": "2.24.0",
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
-        "dotenv": "^6.2.0",
-        "storage-documents": "1.0.0",
-        "logger": "1.0.0",
-        "common": "1.0.0"
+        "storage-documents": "1.0.0"
     }
 }
