--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     },
     "resolutions": {
         "jquery": "^3.4.1",
-        "puppeteer": "^1.18.1"
+        "puppeteer": "^1.18.1",
+        "axe-core": "^3.2.2"
     }
 }
