modify the config structure

--- a/packages/resource-deployment/runtime-config/runtime-config.ci.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ci.json
@@ -1,5 +1,7 @@
 {
-    "logInConsole": true,
+    "logConfig": {
+        "logInConsole": true
+    },
     "queueConfig": {
         "maxQueueSize": 10
     },
