--- a/packages/resource-deployment/runtime-config/runtime-config.ppe.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ppe.json
@@ -14,7 +14,7 @@
         "pageRescanIntervalInDays": 3,
         "failedPageRescanIntervalInHours": 3,
         "maxScanRetryCount": 3,
-        "ruleExclusionList": [
+        "accessibilityRuleExclusionList": [
             "image-redundant-alt",
             "checkboxgroup",
             "empty-heading",
