Ignore configured axe rules at scanning. (#229)
* Ignore axe rules at scanning.

* Fixed lint.

* Comments taken care of.

--- a/packages/resource-deployment/runtime-config/runtime-config.ci.json
+++ b/packages/resource-deployment/runtime-config/runtime-config.ci.json
@@ -13,6 +13,41 @@
         "minLastReferenceSeenInDays": 3,
         "pageRescanIntervalInDays": 3,
         "failedPageRescanIntervalInHours": 3,
-        "maxScanRetryCount": 3
+        "maxScanRetryCount": 3,
+        "accessibilityRuleExclusionList": [
+            "image-redundant-alt",
+            "checkboxgroup",
+            "empty-heading",
+            "p-as-heading",
+            "radiogroup",
+            "table-duplicate-name",
+            "table-fake-caption",
+            "td-has-header",
+            "link-in-text-block",
+            "meta-viewport-large",
+            "tabindex",
+            "scope-attr-valid",
+            "frame-title-unique",
+            "heading-order",
+            "hidden-content",
+            "label-title-only",
+            "region",
+            "skip-link",
+            "landmark-main-is-top-level",
+            "landmark-one-main",
+            "aria-dpub-role-fallback",
+            "focus-order-semantics",
+            "frame-tested",
+            "landmark-banner-is-top-level",
+            "landmark-contentinfo-is-top-level",
+            "landmark-no-duplicate-banner",
+            "landmark-no-duplicate-contentinfo",
+            "page-has-heading-one",
+            "aria-allowed-role",
+            "css-orientation-lock",
+            "form-field-multiple-labels",
+            "label-content-name-mismatch",
+            "landmark-complementary-is-top-level"
+        ]
     }
 }
