--- a/package.json
+++ b/package.json
@@ -94,7 +94,9 @@
             "./packages/common/node_modules",
             "./packages/common/src/test-resources/",
             "./packages/common/test-results",
-            "./packages/resource-deployment/dist"
+            "./packages/resource-deployment/dist",
+            "./packages/web-api/dist",
+            "./packages/web-api/node_modules"
         ],
         "file_type_method": "INCLUDE",
         "file_types": [
