Update response code

--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -23,8 +23,8 @@ paths:
                         schema:
                             $ref: '#/components/schemas/ScanRunRequests'
             responses:
-                '201':
-                    description: Created
+                '202':
+                    description: Accepted
                     content:
                         application/json:
                             schema:
