--- a/.prettierignore
+++ b/.prettierignore
@@ -17,9 +17,9 @@ test-results/
 dist/
 **/*.code-workspace
 **/*.env
-out/
 **/.env.*
 **/yarn-*.log
 **/*.ts.snap
 copyright-header.txt
 **/.DS_Store
+**/.funcignore
