--- a/packages/web-api/package.json
+++ b/packages/web-api/package.json
@@ -8,7 +8,10 @@
         "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
         "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
-        "test": "jest --coverage --colors"
+        "test": "jest --coverage --colors",
+        "watch": "tsc --w",
+        "start:host": "func start",
+        "start": "npm-run-all --parallel start:host watch"
     },
     "repository": {
         "type": "git",
@@ -46,6 +49,8 @@
         "webpack-cli": "^3.2.3"
     },
     "dependencies": {
-        "@azure/cosmos": "^2.1.2"
+        "common": "1.0.0",
+        "reflect-metadata": "^0.1.13",
+        "inversify": "^5.0.1"
     }
 }
