extracting scan logic to scanner package
Co-authored-by: Haonan Liu <haonliu@microsoft.com>

--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
             "./packages/runner/node_modules",
             "./packages/runner/src/test-resources/",
             "./packages/runner/test-results",
+            "./packages/scanner/out",
+            "./packages/scanner/dist",
+            "./packages/scanner/node_modules",
+            "./packages/scanner/test-results",
             "./packages/azure-services/dist",
             "./packages/azure-services/node_modules",
             "./packages/azure-services/src/test-resources/",
