--- a/packages/scan-request-sender/package.json
+++ b/packages/scan-request-sender/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --config-name scanner --colors --progress",
+        "build": "webpack --config ./webpack.config.js --colors --progress",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
         "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
@@ -22,7 +22,6 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service/tree/master/packages/scan-request-sender#readme",
     "devDependencies": {
         "@types/jest": "^24.0.11",
-        "@types/puppeteer": "^1.12.1",
         "@types/verror": "^1.10.3",
         "@types/yargs": "^12.0.9",
         "copy-webpack-plugin": "^4.6.0",
