increase heap size

--- a/build.yaml
+++ b/build.yaml
@@ -38,6 +38,7 @@ steps:
       displayName: run linter
 
     - script: |
+          export NODE_OPTIONS=--max_old_space_size=4096
           yarn test --ci --coverage
       displayName: run unit tests
 
