--- a/packages/resource-deployment/templates/function-app-template.json
+++ b/packages/resource-deployment/templates/function-app-template.json
@@ -6,7 +6,7 @@
             "type": "string",
             "defaultValue": "a11yfunctionapp",
             "metadata": {
-                "description": "The location in which the Azure Storage resources should be deployed."
+                "description": "The Function App name"
             }
         },
         "storageAccountName": {
